backend/src/queryparsing/generated/ZarchiveParser.cpp

// Generated from ZarchiveParser.g4 by ANTLR 4.11.1


#include "ZarchiveParserListener.h"

#include "ZarchiveParser.h"


using namespace antlrcpp;
using namespace z2kplus::backend::queryparsing::generated;

using namespace antlr4;

namespace {

struct ZarchiveParserStaticData final {
  ZarchiveParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ZarchiveParserStaticData(const ZarchiveParserStaticData&) = delete;
  ZarchiveParserStaticData(ZarchiveParserStaticData&&) = delete;
  ZarchiveParserStaticData& operator=(const ZarchiveParserStaticData&) = delete;
  ZarchiveParserStaticData& operator=(ZarchiveParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag zarchiveparserParserOnceFlag;
ZarchiveParserStaticData *zarchiveparserParserStaticData = nullptr;

void zarchiveparserParserInitialize() {
  assert(zarchiveparserParserStaticData == nullptr);
  auto staticData = std::make_unique<ZarchiveParserStaticData>(
    std::vector<std::string>{
      "query", "booleanQuery", "scopedAdjacency", "adjacentWords", "quotedAdjacency", 
      "tildedAdjacency", "literally"
    },
    std::vector<std::string>{
      "", "", "", "'literally('", "'and'", "'or'", "'not'", "'('", "')'", 
      "'^'", "'$'"
    },
    std::vector<std::string>{
      "", "METADATA_FN_ARGS_STRING", "METADATA_FN_ARGS_WHOLE_NUMBER", "LITERALLY", 
      "AND", "OR", "NOT", "LPAREN", "RPAREN", "LANCHOR", "RANCHOR", "FIELD_SPECIFICATION", 
      "UNQUOTED_WORD_OR_PUNCT", "QUOTE", "TILDE", "WS", "QUOTED_WORD_OR_PUNCT", 
      "QUOTED_WS", "ENDQUOTE", "TILDED_WORD_OR_PUNCT", "TILDED_WS", "ENDTILDE", 
      "LITERAL", "WHOLE_NUMBER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  zarchiveparserParserStaticData = staticData.release();
}

}

ZarchiveParser::ZarchiveParser(TokenStream *input) : ZarchiveParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ZarchiveParser::ZarchiveParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ZarchiveParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *zarchiveparserParserStaticData->atn, zarchiveparserParserStaticData->decisionToDFA, zarchiveparserParserStaticData->sharedContextCache, options);
}

ZarchiveParser::~ZarchiveParser() {
  delete _interpreter;
}

const atn::ATN& ZarchiveParser::getATN() const {
  return *zarchiveparserParserStaticData->atn;
}

std::string ZarchiveParser::getGrammarFileName() const {
  return "ZarchiveParser.g4";
}

const std::vector<std::string>& ZarchiveParser::getRuleNames() const {
  return zarchiveparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& ZarchiveParser::getVocabulary() const {
  return zarchiveparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ZarchiveParser::getSerializedATN() const {
  return zarchiveparserParserStaticData->serializedATN;
}


//----------------- QueryContext ------------------------------------------------------------------

ZarchiveParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::QueryContext::booleanQuery() {
  return getRuleContext<ZarchiveParser::BooleanQueryContext>(0);
}

tree::TerminalNode* ZarchiveParser::QueryContext::EOF() {
  return getToken(ZarchiveParser::EOF, 0);
}

std::vector<tree::TerminalNode *> ZarchiveParser::QueryContext::WS() {
  return getTokens(ZarchiveParser::WS);
}

tree::TerminalNode* ZarchiveParser::QueryContext::WS(size_t i) {
  return getToken(ZarchiveParser::WS, i);
}


size_t ZarchiveParser::QueryContext::getRuleIndex() const {
  return ZarchiveParser::RuleQuery;
}

void ZarchiveParser::QueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery(this);
}

void ZarchiveParser::QueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery(this);
}

ZarchiveParser::QueryContext* ZarchiveParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 0, ZarchiveParser::RuleQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(15);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZarchiveParser::WS) {
      setState(14);
      match(ZarchiveParser::WS);
    }
    setState(17);
    booleanQuery(0);
    setState(19);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZarchiveParser::WS) {
      setState(18);
      match(ZarchiveParser::WS);
    }
    setState(21);
    match(ZarchiveParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BooleanQueryContext ------------------------------------------------------------------

ZarchiveParser::BooleanQueryContext::BooleanQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ZarchiveParser::BooleanQueryContext::getRuleIndex() const {
  return ZarchiveParser::RuleBooleanQuery;
}

void ZarchiveParser::BooleanQueryContext::copyFrom(BooleanQueryContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MetadataFnArgsWholeNumberContext ------------------------------------------------------------------

tree::TerminalNode* ZarchiveParser::MetadataFnArgsWholeNumberContext::METADATA_FN_ARGS_WHOLE_NUMBER() {
  return getToken(ZarchiveParser::METADATA_FN_ARGS_WHOLE_NUMBER, 0);
}

tree::TerminalNode* ZarchiveParser::MetadataFnArgsWholeNumberContext::WHOLE_NUMBER() {
  return getToken(ZarchiveParser::WHOLE_NUMBER, 0);
}

tree::TerminalNode* ZarchiveParser::MetadataFnArgsWholeNumberContext::RPAREN() {
  return getToken(ZarchiveParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> ZarchiveParser::MetadataFnArgsWholeNumberContext::WS() {
  return getTokens(ZarchiveParser::WS);
}

tree::TerminalNode* ZarchiveParser::MetadataFnArgsWholeNumberContext::WS(size_t i) {
  return getToken(ZarchiveParser::WS, i);
}

ZarchiveParser::MetadataFnArgsWholeNumberContext::MetadataFnArgsWholeNumberContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::MetadataFnArgsWholeNumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMetadataFnArgsWholeNumber(this);
}
void ZarchiveParser::MetadataFnArgsWholeNumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMetadataFnArgsWholeNumber(this);
}
//----------------- NotContext ------------------------------------------------------------------

tree::TerminalNode* ZarchiveParser::NotContext::NOT() {
  return getToken(ZarchiveParser::NOT, 0);
}

tree::TerminalNode* ZarchiveParser::NotContext::WS() {
  return getToken(ZarchiveParser::WS, 0);
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::NotContext::booleanQuery() {
  return getRuleContext<ZarchiveParser::BooleanQueryContext>(0);
}

ZarchiveParser::NotContext::NotContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::NotContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNot(this);
}
void ZarchiveParser::NotContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNot(this);
}
//----------------- ParensContext ------------------------------------------------------------------

tree::TerminalNode* ZarchiveParser::ParensContext::LPAREN() {
  return getToken(ZarchiveParser::LPAREN, 0);
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::ParensContext::booleanQuery() {
  return getRuleContext<ZarchiveParser::BooleanQueryContext>(0);
}

tree::TerminalNode* ZarchiveParser::ParensContext::RPAREN() {
  return getToken(ZarchiveParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> ZarchiveParser::ParensContext::WS() {
  return getTokens(ZarchiveParser::WS);
}

tree::TerminalNode* ZarchiveParser::ParensContext::WS(size_t i) {
  return getToken(ZarchiveParser::WS, i);
}

ZarchiveParser::ParensContext::ParensContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::ParensContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParens(this);
}
void ZarchiveParser::ParensContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParens(this);
}
//----------------- OrContext ------------------------------------------------------------------

std::vector<ZarchiveParser::BooleanQueryContext *> ZarchiveParser::OrContext::booleanQuery() {
  return getRuleContexts<ZarchiveParser::BooleanQueryContext>();
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::OrContext::booleanQuery(size_t i) {
  return getRuleContext<ZarchiveParser::BooleanQueryContext>(i);
}

std::vector<tree::TerminalNode *> ZarchiveParser::OrContext::WS() {
  return getTokens(ZarchiveParser::WS);
}

tree::TerminalNode* ZarchiveParser::OrContext::WS(size_t i) {
  return getToken(ZarchiveParser::WS, i);
}

tree::TerminalNode* ZarchiveParser::OrContext::OR() {
  return getToken(ZarchiveParser::OR, 0);
}

ZarchiveParser::OrContext::OrContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::OrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOr(this);
}
void ZarchiveParser::OrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOr(this);
}
//----------------- AdjContext ------------------------------------------------------------------

ZarchiveParser::ScopedAdjacencyContext* ZarchiveParser::AdjContext::scopedAdjacency() {
  return getRuleContext<ZarchiveParser::ScopedAdjacencyContext>(0);
}

ZarchiveParser::AdjContext::AdjContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::AdjContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAdj(this);
}
void ZarchiveParser::AdjContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAdj(this);
}
//----------------- AndContext ------------------------------------------------------------------

std::vector<ZarchiveParser::BooleanQueryContext *> ZarchiveParser::AndContext::booleanQuery() {
  return getRuleContexts<ZarchiveParser::BooleanQueryContext>();
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::AndContext::booleanQuery(size_t i) {
  return getRuleContext<ZarchiveParser::BooleanQueryContext>(i);
}

std::vector<tree::TerminalNode *> ZarchiveParser::AndContext::WS() {
  return getTokens(ZarchiveParser::WS);
}

tree::TerminalNode* ZarchiveParser::AndContext::WS(size_t i) {
  return getToken(ZarchiveParser::WS, i);
}

tree::TerminalNode* ZarchiveParser::AndContext::AND() {
  return getToken(ZarchiveParser::AND, 0);
}

ZarchiveParser::AndContext::AndContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::AndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnd(this);
}
void ZarchiveParser::AndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnd(this);
}
//----------------- MetadataFnArgsStringContext ------------------------------------------------------------------

tree::TerminalNode* ZarchiveParser::MetadataFnArgsStringContext::METADATA_FN_ARGS_STRING() {
  return getToken(ZarchiveParser::METADATA_FN_ARGS_STRING, 0);
}

tree::TerminalNode* ZarchiveParser::MetadataFnArgsStringContext::LITERAL() {
  return getToken(ZarchiveParser::LITERAL, 0);
}

tree::TerminalNode* ZarchiveParser::MetadataFnArgsStringContext::RPAREN() {
  return getToken(ZarchiveParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> ZarchiveParser::MetadataFnArgsStringContext::WS() {
  return getTokens(ZarchiveParser::WS);
}

tree::TerminalNode* ZarchiveParser::MetadataFnArgsStringContext::WS(size_t i) {
  return getToken(ZarchiveParser::WS, i);
}

ZarchiveParser::MetadataFnArgsStringContext::MetadataFnArgsStringContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::MetadataFnArgsStringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMetadataFnArgsString(this);
}
void ZarchiveParser::MetadataFnArgsStringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMetadataFnArgsString(this);
}
//----------------- ImpliedAndContext ------------------------------------------------------------------

std::vector<ZarchiveParser::BooleanQueryContext *> ZarchiveParser::ImpliedAndContext::booleanQuery() {
  return getRuleContexts<ZarchiveParser::BooleanQueryContext>();
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::ImpliedAndContext::booleanQuery(size_t i) {
  return getRuleContext<ZarchiveParser::BooleanQueryContext>(i);
}

tree::TerminalNode* ZarchiveParser::ImpliedAndContext::WS() {
  return getToken(ZarchiveParser::WS, 0);
}

ZarchiveParser::ImpliedAndContext::ImpliedAndContext(BooleanQueryContext *ctx) { copyFrom(ctx); }

void ZarchiveParser::ImpliedAndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImpliedAnd(this);
}
void ZarchiveParser::ImpliedAndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImpliedAnd(this);
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::booleanQuery() {
   return booleanQuery(0);
}

ZarchiveParser::BooleanQueryContext* ZarchiveParser::booleanQuery(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  ZarchiveParser::BooleanQueryContext *_localctx = _tracker.createInstance<BooleanQueryContext>(_ctx, parentState);
  ZarchiveParser::BooleanQueryContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, ZarchiveParser::RuleBooleanQuery, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(68);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ZarchiveParser::METADATA_FN_ARGS_STRING: {
        _localctx = _tracker.createInstance<MetadataFnArgsStringContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(24);
        match(ZarchiveParser::METADATA_FN_ARGS_STRING);
        setState(28);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ZarchiveParser::WS) {
          setState(25);
          match(ZarchiveParser::WS);
          setState(30);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(31);
        match(ZarchiveParser::LITERAL);
        setState(35);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ZarchiveParser::WS) {
          setState(32);
          match(ZarchiveParser::WS);
          setState(37);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(38);
        match(ZarchiveParser::RPAREN);
        break;
      }

      case ZarchiveParser::METADATA_FN_ARGS_WHOLE_NUMBER: {
        _localctx = _tracker.createInstance<MetadataFnArgsWholeNumberContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(39);
        match(ZarchiveParser::METADATA_FN_ARGS_WHOLE_NUMBER);
        setState(43);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ZarchiveParser::WS) {
          setState(40);
          match(ZarchiveParser::WS);
          setState(45);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(46);
        match(ZarchiveParser::WHOLE_NUMBER);
        setState(50);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ZarchiveParser::WS) {
          setState(47);
          match(ZarchiveParser::WS);
          setState(52);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(53);
        match(ZarchiveParser::RPAREN);
        break;
      }

      case ZarchiveParser::LITERALLY:
      case ZarchiveParser::LANCHOR:
      case ZarchiveParser::FIELD_SPECIFICATION:
      case ZarchiveParser::UNQUOTED_WORD_OR_PUNCT:
      case ZarchiveParser::QUOTE:
      case ZarchiveParser::TILDE: {
        _localctx = _tracker.createInstance<AdjContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(54);
        scopedAdjacency();
        break;
      }

      case ZarchiveParser::NOT: {
        _localctx = _tracker.createInstance<NotContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(55);
        match(ZarchiveParser::NOT);
        setState(56);
        match(ZarchiveParser::WS);
        setState(57);
        booleanQuery(5);
        break;
      }

      case ZarchiveParser::LPAREN: {
        _localctx = _tracker.createInstance<ParensContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(58);
        match(ZarchiveParser::LPAREN);
        setState(60);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ZarchiveParser::WS) {
          setState(59);
          match(ZarchiveParser::WS);
        }
        setState(62);
        booleanQuery(0);
        setState(64);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ZarchiveParser::WS) {
          setState(63);
          match(ZarchiveParser::WS);
        }
        setState(66);
        match(ZarchiveParser::RPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(85);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(83);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<ImpliedAndContext>(_tracker.createInstance<BooleanQueryContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleBooleanQuery);
          setState(70);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(71);
          match(ZarchiveParser::WS);
          setState(72);
          booleanQuery(5);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<AndContext>(_tracker.createInstance<BooleanQueryContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleBooleanQuery);
          setState(73);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(74);
          match(ZarchiveParser::WS);
          setState(75);
          match(ZarchiveParser::AND);
          setState(76);
          match(ZarchiveParser::WS);
          setState(77);
          booleanQuery(4);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<OrContext>(_tracker.createInstance<BooleanQueryContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleBooleanQuery);
          setState(78);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(79);
          match(ZarchiveParser::WS);
          setState(80);
          match(ZarchiveParser::OR);
          setState(81);
          match(ZarchiveParser::WS);
          setState(82);
          booleanQuery(3);
          break;
        }

        default:
          break;
        } 
      }
      setState(87);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ScopedAdjacencyContext ------------------------------------------------------------------

ZarchiveParser::ScopedAdjacencyContext::ScopedAdjacencyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ZarchiveParser::AdjacentWordsContext* ZarchiveParser::ScopedAdjacencyContext::adjacentWords() {
  return getRuleContext<ZarchiveParser::AdjacentWordsContext>(0);
}

ZarchiveParser::QuotedAdjacencyContext* ZarchiveParser::ScopedAdjacencyContext::quotedAdjacency() {
  return getRuleContext<ZarchiveParser::QuotedAdjacencyContext>(0);
}

ZarchiveParser::TildedAdjacencyContext* ZarchiveParser::ScopedAdjacencyContext::tildedAdjacency() {
  return getRuleContext<ZarchiveParser::TildedAdjacencyContext>(0);
}

ZarchiveParser::LiterallyContext* ZarchiveParser::ScopedAdjacencyContext::literally() {
  return getRuleContext<ZarchiveParser::LiterallyContext>(0);
}

tree::TerminalNode* ZarchiveParser::ScopedAdjacencyContext::FIELD_SPECIFICATION() {
  return getToken(ZarchiveParser::FIELD_SPECIFICATION, 0);
}

tree::TerminalNode* ZarchiveParser::ScopedAdjacencyContext::LANCHOR() {
  return getToken(ZarchiveParser::LANCHOR, 0);
}

tree::TerminalNode* ZarchiveParser::ScopedAdjacencyContext::RANCHOR() {
  return getToken(ZarchiveParser::RANCHOR, 0);
}

tree::TerminalNode* ZarchiveParser::ScopedAdjacencyContext::WS() {
  return getToken(ZarchiveParser::WS, 0);
}


size_t ZarchiveParser::ScopedAdjacencyContext::getRuleIndex() const {
  return ZarchiveParser::RuleScopedAdjacency;
}

void ZarchiveParser::ScopedAdjacencyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScopedAdjacency(this);
}

void ZarchiveParser::ScopedAdjacencyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ZarchiveParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScopedAdjacency(this);
}

ZarchiveParser::ScopedAdjacencyContext* ZarchiveParser::scopedAdjacency() {
  ScopedAdjacencyContext *_localctx = _tracker.createInstance<ScopedAdjacencyContext>(_ctx, getState());
  enterRule(_localctx, 4, ZarchiveParser::RuleScopedAdjacency);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ZarchiveParser::FIELD_SPECIFICATION) {
      setState(88);
      match(ZarchiveParser::FIELD_SPECIFICATION);
      setState(90);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ZarchiveParser::WS) {
        setState(89);
        match(ZarchiveParser::WS);
      }
    }
    setState(95);
    _errHandler->sync(this);
